fixes background gradient height on firefox
and corrects also wrong height search screen.

--- a/resources/public/css/project-alpha.css
+++ b/resources/public/css/project-alpha.css
@@ -32,6 +32,7 @@ body {
 
 #outer-frame {
   /* background: #AFA; */
+    height:100%;
 }
 
 h1,
